# AI_solo_coder_task_A_099

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/config/: damage_params.json  ship_config.json
backend/src/: alarm_ws.rs  clickhouse_client.rs  compartment_optimizer.rs  dtu_receiver.rs  flooding_simulator.rs  genetic_algorithm.rs  handlers.rs  main.rs  metrics.rs  models.rs  ship_statics.rs  websocket.rs
clickhouse/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: app.js  flooding_panel.js  junk_ship_3d.js  shipModel.js
scripts/: sensor_simulator.py
simulator/: Dockerfile  sensor_simulator.py
