[package]
name = "ship_simulation_backend"
version = "1.0.0"
edition = "2021"
description = "古代水密隔舱船舶抗沉性仿真与破舱稳性分析系统 - Rust后端"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-web-actors = "4.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
clickhouse-rs = "3.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "utc"] }
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
prometheus = "0.13"
lazy_static = "1.4"
rumqttc = "0.24"
thiserror = "1.0"
anyhow = "1.0"
futures-util = "0.3"
bytestring = "1.0"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
